@@ -1,3 +1,8 @@
+2009-09-25  Dan Fandrich <dan@coneharvesters.com>
+
+	* libexif/exif-data.c: Added more error log messages and improved
+	  a few data boundary checks.
+
 2009-09-24  Dan Fandrich <dan@coneharvesters.com>
 
 	* Fixed some problems in MakerNote parsing that could cause a
